span inserted to check app.pyy

--- a/index.html
+++ b/index.html
@@ -373,6 +373,7 @@
 
       </div>
     </div>
+    <span id="python_data">helloe world</span>
   </main>
   <!--=====================main ends=====================-->
 
