--- a/index.html
+++ b/index.html
@@ -359,6 +359,7 @@
               </div>
             </div>
             <div class="col-sm-4 my-5 text-center">
+              <span id="python_data">hello world</span>
               <span class="mr-3"><i class="fab fa-facebook-f"></i> </span>
               <span class="mr-3"><i class="fab fa-twitter"></i> </span>
               <span class="mr-3"><i class="fab fa-instagram"></i> </span>
@@ -373,7 +374,7 @@
 
       </div>
     </div>
-    <span id="python_data">helloe world</span>
+    
   </main>
   <!--=====================main ends=====================-->
 
