--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta property=”og:url” content=”http://www.yourdomain.com” />
+  <meta property="og:url" content="http://www.yourdomain.com" />
+  <meta property="og:description" content="Your entertaining and descriptive copy here, if your meta description is good, use it." />
   <title>Document</title>
   <link rel="stylesheet" href="css/bootstrap.min.css" />
   <link rel="stylesheet" href="css/fontawesome-all.min.css">
