--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta property="og:url" content="http://www.yourdomain.com" />
-  <meta property="og:description" content="Your entertaining and descriptive copy here, if your meta description is good, use it." />
+  <meta property="og:description" content="web development with shahria jaman khan"/>
+  <meta property="og:image" content="https://images.unsplash.com/photo-1480365501497-199581be0e66?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80"/>
+  <meta name="description" content="hello world. this is  developer shahriar jaman khan. i creat website that makes sense"
   <title>Document</title>
   <link rel="stylesheet" href="css/bootstrap.min.css" />
   <link rel="stylesheet" href="css/fontawesome-all.min.css">
