--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta property="og:description" content="web development with shahria jaman khan"/>
+  <meta property="og:title" content="web development with shahria jaman khan"/>
+  <meta property="og:description" content="web development with shahria jaman khan hello world. this is  developer shahriar jaman khan. i creat website that makes sense"/>
   <meta property="og:image" content="https://imsj7k.github.io/portfolio-with-side-menu/assets/art_republique_camouflaj_logan_and_sons_97251_2048x1295.png"/>
   <meta name="description" content="hello world. this is  developer shahriar jaman khan. i creat website that makes sense"
-  <title>Document</title>
+  <title>hello world. this is  developer shahriar jaman khan. i creat website that makes sense</title>
   <link rel="stylesheet" href="css/bootstrap.min.css" />
   <link rel="stylesheet" href="css/fontawesome-all.min.css">
   <link rel="stylesheet" href="css/style.css" />
