--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta property="og:title" content="web development with shahria jaman khan"/>
   <meta property="og:description" content="web development with shahria jaman khan"/>
   <meta property="og:image" content="https://imsj7k.github.io/portfolio-with-side-menu/assets/art_republique_camouflaj_logan_and_sons_97251_2048x1295.png"/>
-  <meta name="description" content="hello world. this is  developer shahriar jaman khan. i creat website that makes sense"
+  <meta name="description" content="hello world. this is  developer shahriar jaman khan. i creat website that makes sense"/>
   <title>hello world</title>
   <link rel="stylesheet" href="css/bootstrap.min.css" />
   <link rel="stylesheet" href="css/fontawesome-all.min.css">
